migrate-ddd: clean book-service